--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,12 @@
 include ':app'
+buildscript {
+
+    repositories {
+        google()
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
+    }
+}
